# cbz-editor

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.de.md  README.en.md  README.es.md  README.it.md  README.md
.github/workflows/: release.yml
assets/: cbz-editor-appimage.desktop  cbz-editor.desktop
src/: main.rs
